--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p>Translating more than words</p>
+							<p class="lowercase">Translating more than words</p>
 
 						<!-- Nav -->
 							<nav id="nav">
