--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="mailto:tony@alptranslationlab.com" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+												<a href="mailto:tony@" class="form-button-submit button icon solid fa-envelope">Send Message</a>
 											</div>
 										</div>
 									</form>
