--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic01.jpg" alt=""  /></a>
 										<header>
 											<h3>Okay, so what is this?</h3>
 										</header>
@@ -91,7 +91,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" height: "280px"/></a>
 										<header>
 											<h3>What's this built with?</h3>
 										</header>
