--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" height: "280"/></a>
+										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" height= "232"/></a>
 										<header>
 											<h3>What's this built with?</h3>
 										</header>
