--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
 										<header>
 											<h3>Okay, so what is this?</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p>This is <strong>Alptra</strong></p>
 									</section>
 
 							</div>
@@ -79,11 +77,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" /></a>
 										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
+											<h3>Nice! What is Alptra?</h3>
 										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-										I started it as a way to both test my responsive tools and sharpen up my coding
-										and design skills a bit.</p>
+										<p></p>
 									</section>
 
 							</div>
@@ -93,10 +89,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "232"/></a>
 										<header>
-											<h3>What's this built with?</h3>
+											<h3></h3>
 										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+										<p><strong></strong></p>
 									</section>
 
 							</div>
@@ -133,15 +128,7 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>I mean isn't it possible?</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
+											<p>Translation</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
@@ -155,25 +142,8 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>You should probably check out her work</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum malesuada.</p>
-											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-											magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-											tristique at erat. Curabitur leo nibh, rutrum eu malesuada in, tristique
-											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-											magna tempus.</p>
+											<p>Translation</p>
+											<p>Translation</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
@@ -195,8 +165,7 @@
 																<span class="date">July 30</span>
 																<h3><a href="#">Just another post</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Translation</p>
 														</article>
 
 												</li>
@@ -208,8 +177,7 @@
 																<span class="date">July 28</span>
 																<h3><a href="#">And another post</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Translation</p>
 														</article>
 
 												</li>
@@ -221,8 +189,7 @@
 																<span class="date">July 24</span>
 																<h3><a href="#">One more post</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Translation</p>
 														</article>
 
 												</li>
@@ -240,10 +207,7 @@
 																<h3><a href="#">Something of note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Phasellus sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p>Translation</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
@@ -258,10 +222,7 @@
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
-															<p>Phasellus sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p>Translation</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
@@ -306,9 +267,7 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>Translation</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
@@ -329,12 +288,6 @@
 											<ul class="icons">
 												<li class="icon brands fa-twitter">
 													<a href="#">@untitled</a>
-												</li>
-												<li class="icon brands fa-instagram">
-													<a href="#">instagram.com/untitled</a>
-												</li>
-												<li class="icon brands fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
 												</li>
 												<li class="icon brands fa-facebook-f">
 													<a href="#">facebook.com/untitled</a>
