--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<!-- Header -->
 				<section id="header">
 					<div class="container">
-
+						<h2>WEBSITE UNDER DEVELOPMENT</h2>
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="lowercase">Translating more than words</p>
@@ -137,11 +137,10 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
-												for these awesome demo photos</a></h2>
+												<h2><a href="#">By the way,</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>You should probably check out her work</h3>
+											<h3>You should probably check out</h3>
 											<p>Translation</p>
 											<p>Translation</p>
 											<ul class="actions">
