--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 									<li>
 										<a href="#" class="icon fa-chart-bar"><span>Dropdown</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">Translation</a></li>
+											<li><a href="#">Translation</a></li>
+											<li><a href="#">Translation</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">Translation</a>
 												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
+													<li><a href="#">Translation</a></li>
+													<li><a href="#">Translation</a></li>
+													<li><a href="#">Translation</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Translation</a></li>
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
@@ -56,7 +56,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Alptra</strong>!</h2>
+							<h2><strong>Translation Services</strong></h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
