--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen"  /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>French language specialist</h3>
 										</header>
 										<p>This is <strong>Alptra</strong></p>
 									</section>
@@ -77,7 +77,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" /></a>
 										<header>
-											<h3>Nice! What is Alptra?</h3>
+											<h3>Translation</h3>
 										</header>
 										<p></p>
 									</section>
@@ -89,7 +89,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "232"/></a>
 										<header>
-											<h3></h3>
+											<h3>Proofreading</h3>
 										</header>
 										<p><strong></strong></p>
 									</section>
