--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
+						<p>"We are happy with your quality and excellent work"<br /></p>
 					</div>
 				</section>
 
