--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
+												<h2><a href="#"><strong>Audiovisual translation</strong><br />
 												but it’s the aliens.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
