--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Translation</p>
+									<p>Alptra</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
