--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>"We are happy with your quality and excellent work"<br /></p>
+						<p><i>"We are happy with your quality and excellent work"<br /></p>
 					</div>
 				</section>
 
