--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work"<br /></p>
+						<p><i>"We are happy with your quality and excellent work"<br /></i></p>
 					</div>
 				</section>
 
