--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work"<br /></i></p>
+						<p><i>"We are happy with your quality and excellent work."<br /></i></p>
 					</div>
 				</section>
 
@@ -135,7 +135,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">By the way,</a></h2>
+												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>You should probably check out</h3>
