--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<!-- Header -->
 				<section id="header">
 					<div class="container">
-						<h2>WEBSITE UNDER DEVELOPMENT</h2>
+						<h2>Website under development</h2>
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="lowercase">Translating more than words</p>
