--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -127,7 +127,7 @@
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
-												<li class="icon brands fa-twitter">
+												<li class="icon brands fa-linkedin">
 													<a href="#">@untitled</a>
 												</li>
 												<li class="icon brands fa-facebook-f">
