--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													267 Somewhere Road<br />
+													, 00000<br />
+													France
 												</li>
 												<li class="icon solid fa-phone">
 													(000) 000-0000
