--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													267 Somewhere Road<br />
-													, 00000<br />
+													267 Rue de la Piat<br />
+													73260 Grand-Aigueblanche<br />
 													France
 												</li>
 												<li class="icon solid fa-phone">
