--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 															<header>
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
+															<a href="#" class="image left"><img src="images/pic07.jpg" alt="alps" width="500" height="700"/></a>
 															<p>Translation</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
