--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 											<header>
 												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" height="700"/></a>
 											<h3>You should probably check out</h3>
 											<p>Translation</p>
 											<p>Translation</p>
@@ -218,7 +218,7 @@
 															<header>
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/pic07.jpg" alt="alps" width="500" height="700"/></a>
+															<a href="#" class="image left"><img src="images/pic07.jpg" alt=""/></a>
 															<p>Translation</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
