--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 											<header>
 												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" height="700"/></a>
+											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
 											<h3>You should probably check out</h3>
 											<p>Translation</p>
 											<p>Translation</p>
