--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 										<header>
 											<h3>French language specialist</h3>
 										</header>
-										<p>This is <strong>Alptra</strong></p>
+										<p>This is <strong>Alptra</strong>. I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.
+										I offer translation services from English into French, in the fields of French law, industry, entertainment, and travel. I also specialize in audiovisual translation.</p>
 									</section>
 
 							</div>
@@ -139,7 +140,6 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
 											<h3>You should probably check out</h3>
-											<p>Translation</p>
 											<p>Translation</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
