--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work."<br /></i></p>
+						<p><i>"We are happy with your quality and excellent work." S. Crawford<br /></i></p>
 					</div>
 				</section>
 
@@ -127,7 +127,7 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>I mean isn't it possible?</h3>
-											<p>Translation</p>
+											<p>Able to work with creativity and attention to detail.</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
@@ -139,7 +139,7 @@
 												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
-											<h3>You should probably check out</h3>
+											<h3>My clients include</h3>
 											<p>Translation</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
