--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
-											<h3>My clients include</h3>
+											<h3>My clients include individuals, businesses, broadcasting & media production companies.</h3>
 											<p>Translation</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
