--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work." S. Crawford<br /></i></p>
+						<p><i>"We are happy with your quality and excellent work."
+							S. Crawford<br /></i></p>
 					</div>
 				</section>
 
