--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<section id="banner">
 					<div class="container">
 						<p><i>"We are happy with your quality and excellent work."
-							S. Crawford<br /></i></p>
+						<br><i>M. Crawford<br /></i></p>
 					</div>
 				</section>
 
