--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 										<header>
 											<h3>French language specialist</h3>
 										</header>
-										<p>This is <strong>Alptra</strong>. I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.
-										I offer translation services from English into French, in the fields of French law, industry, entertainment, and travel. I also specialize in audiovisual translation.</p>
+										<p>This is <strong>Alptra</strong>. I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
 									</section>
 
 							</div>
@@ -79,7 +78,7 @@
 										<header>
 											<h3>Translation</h3>
 										</header>
-										<p></p>
+										<p>I offer translation services from English into French, in the fields of French law, industry, entertainment, and travel. I also specialize in audiovisual translation.</p>
 									</section>
 
 							</div>
@@ -91,7 +90,7 @@
 										<header>
 											<h3>Proofreading</h3>
 										</header>
-										<p><strong></strong></p>
+										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked</p>
 									</section>
 
 							</div>
