--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -184,8 +184,8 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													1234 Somewhere Road<br />
-													00000<br />
+													267 Rue de la Piat<br />
+													73260 Grand-Aigueblanche<br />
 													France
 												</li>
 												<li class="icon solid fa-phone">
