--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 			<!-- Header -->
 				<section id="header">
 					<div class="container">
-						<h2>Website under development</h2>
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="lowercase">Translating more than words</p>
@@ -73,7 +72,7 @@
 										<header>
 											<h3>Proofreading</h3>
 										</header>
-										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked</p>
+										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
 									</section>
 
 							</div>
