--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work."
-						<br><i>M. Crawford<br /></i></p>
+						<p><i>"We are happy with your quality and excellent work."<p>
+						<p><br><i>M. Crawford<br /></i></p>
 					</div>
 				</section>
 
