--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work."
-						<br><i>M. Crawford<i><br/></p>
+						<p><i>"We are happy with your quality and excellent work. 
+							<br></br>M. Crawford</i></p>
 					</div>
 				</section>
 
