--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 							</div>
 						</div>
 					</div>
+					<iframe src="images/VideoDePresentation.mp4" width="1280" height="720"></iframe> 
 				</section>
-			<iframe src="images/VideoDePresentation.mp4"></iframe>
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
