--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<section id="banner">
 					<div class="container">
 						<p><i>"We are happy with your quality and excellent work. 
-						<br>M. Crawford</i></p>
+						<br>M. Crawford, USA.</i></p>
 					</div>
 				</section>
 
