--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p><i>"We are happy with your quality and excellent work. 
-						<br>M. Crawford, USA.</i></p>
+						<p><i>"We are happy with your quality and excellent work. It's a real pleasure working with you.
+						<br>M. Crawford, USA.
+						<br>"Our team could not be more satisfied with your work, and we look forward to continuing this relationship."
+						<br>S. Green, USA.
+						<br>"My team were very impressed."
+						<br>K. Smith, London.</i></p>
 					</div>
 				</section>
 
