--- a/index.html
+++ b/index.html
@@ -87,15 +87,13 @@
 				</section>
 			<!-- Banner -->
 				<section id="banner">
-					<div class="container">
-          					<p>
-						    <i
-						      >"We are happy with your quality and excellent work. <br />M.
-						      Crawford, USA. <br />"Our team could not be more satisfied with
-						      your work." <br />S. Green, USA. <br />"My team were very
-						      impressed." <br />K. Smith, London.</i
-						    >
-						 </p>
+					<div class="container" id="containerModif">
+						<p>"We are happy with your quality and excellent work.</p>
+						<p>M.Crawford, USA.</p>
+						<p>"Our team could not be more satisfied with your work." </p>
+						<p>S. Green, USA.</p>
+						<p>"My team were very impressed."</p>
+						<p>K. Smith, London.</p>
 					</div>
         				
 				</section>
