--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
 				</section>
 			<!-- Banner -->
 				<section id="banner">
-					<div class="container" id="containerModif">
-						<p>"We are happy with your quality and excellent work.</p>
-						<p>M.Crawford, USA.</p>
-						<p>"Our team could not be more satisfied with your work." </p>
-						<p>S. Green, USA.</p>
-						<p>"My team were very impressed."</p>
-						<p>K. Smith, London.</p>
+					<div class="container" >
+						<i>
+							<p>"We are happy with your quality and excellent work.</p>
+							<p>M.Crawford, USA.</p>
+							<p>"Our team could not be more satisfied with your work." </p>
+							<p>S. Green, USA.</p>
+							<p>"My team were very impressed."</p>
+							<p>K. Smith, London.</p>
+						</i>
 					</div>
         				
 				</section>
