--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 						<i>
 							<p>"We are happy with your quality and excellent work.</p>
 							<p>M.Crawford, USA.</p>
-							<p>"Our team could not be more satisfied with your work." </p>
+							<p><br>"Our team could not be more satisfied with your work." </p>
 							<p>S. Green, USA.</p>
-							<p>"My team were very impressed."</p>
+							<p><br>"My team were very impressed."</p>
 							<p>K. Smith, London.</p>
 						</i>
 					</div>
