--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>I mean isn't it possible?</h3>
-											<p>Able to work with creativity and attention to detail.</p>
+											<p>I am able to work with creativity and attention to detail.</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
