--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</div>
 						</div>
 					</div>
-					<iframe src="images/VideoDePresentation.mp4" width="auto" height="auto"></iframe> 
+					<iframe src="images/VideoDePresentation.mp4" width="1280" height="720"></iframe> 
 				</section>
 			<!-- Banner -->
 				<section id="banner">
