--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 	<head>
 		<title>Alptra</title>
 		<meta charset="utf-8" />
+		    <title>Test Video Responsive</title>
+    <style type="text/css">
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            padding-top: 30px;
+            height: 0;
+            overflow: hidden;
+        }
+        .video-container iframe,
+        .video-container object,
+        .video-container embed {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        #page {
+            width: 100%;
+            height: 100%;
+        }
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
