--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							</div>
 						</div>
 					</div>
-					<iframe src="images/VideoDePresentation.mp4" width="1280" height="720"></iframe> 
+					<iframe src="images/VideoDePresentation.mp4" frameborder="0" allowfullscreen></iframe> 
 				</section>
 			<!-- Banner -->
 				<section id="banner">
