--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 							</div>
 						</div>
 					</div>
-					<iframe src="images/VideoDePresentation.mp4" frameborder="0" allowfullscreen></iframe> 
+					<div class="embedresize">
+					<div>
+					<iframe src="images/VideoDePresentation.mp4" frameborder="0"></iframe> 
+					</div>
+					</div>
 				</section>
 			<!-- Banner -->
 				<section id="banner">
