--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 							</div>
 						</div>
 					</div>
+					<div class="conteneur">
 					<iframe src="images/VideoDePresentation.mp4" frameborder="0"></iframe> 
+					</div>
 				</section>
 			<!-- Banner -->
 				<section id="banner">
