--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 					<div class="conteneur">
-					<iframe src="images/VideoDePresentation.mp4" frameborder="0"></iframe> 
+					<iframe src="images/VideoDePresentation.mp4" ></iframe> 
 					</div>
 				</section>
 			<!-- Banner -->
