--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container" >
-						<i>
+						<FONT size="10pt"><i>
 							<p>"We are happy with your quality and excellent work.</p>
 							<p>M.Crawford, USA.</p>
 							<p><br>"Our team could not be more satisfied with your work." </p>
 							<p>S. Green, USA.</p>
 							<p><br>"My team were very impressed."</p>
 							<p>K. Smith, London.</p>
-						</i>
+						</i></FONT>
 					</div>
         				
 				</section>
