--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<header>
 											<h3>Translation</h3>
 										</header>
-										<p>I offer translation services from English into French, in the fields of French law, industry, entertainment, and travel. I also specialize in audiovisual translation.</p>
+										<p>I offer translation services from English into French, in the fields of French law, industry, and entertainment.</p>
 									</section>
 
 							</div>
