--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -113,7 +113,7 @@
 																<h3><a href="#">Something of note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Translation</p>
+															<p>Voice over</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
@@ -128,7 +128,7 @@
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
-															<p>Translation</p>
+															<p>Transcription</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
