--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 																<h3><a href="#">Something of less note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt=""/></a>
-															<p>Transcription. Get your audio and video files transcribed, whether it's a podcast, lecture, or meeting</p>
+															<p>Transcription. Get your audio and video files transcribed, whether it's a podcast, lecture, or meeting, in French.</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
 															</ul>
