--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -44,7 +44,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2>Behold! This is <strong>Alptra</strong><br />!</h2>
+												<h2>Behold! This is <strong>Alptra</strong>!</h2>
 											</header>
 											<span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
 											<h3>Right is also not left</h3>
