--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -53,6 +53,18 @@
 											<p>Translation</p>
 										</article>
 
+									<!-- Post -->
+										<article class="box post">
+											<header>
+												<h2>Behold! This is <strong>Alptra</strong>!</h2>
+											</header>
+											<span class="image featured"><img src="images/pic09.jpg" alt="" /></span>
+											<h3>Right is also not left</h3>
+											<p></p>
+											<h3>Translation</h3>
+											<p>Translation</p>
+										</article>
+									
 								</div>
 
 							<!-- Sidebar -->
