--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -167,7 +167,7 @@
 												<li class="icon brands fa-facebook-f">
 													<a href="#"></a>
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://www.linkedin.com"></script>
+<script type="IN/Share" data-url="https://www.linkedin.com/in/alptra"></script>
 												</li>
 											</ul>
 										</div>
