--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -164,7 +164,7 @@
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
-												<li class="icon brands fa-facebook-f">
+												<li class="">
 													<a href="#"></a>
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
 <script type="IN/Share" data-url="https://www.linkedin.com/in/alptra"></script>
