--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of less note</a></h3>
+																<h3><a href="#">Something of note</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt=""/></a>
 															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
