--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										<header>
 											<h3>French language specialist</h3>
 										</header>
-										<p>This is <strong>Alptra</strong>. I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
+										<p>I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
 									</section>
 
 							</div>
