--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -56,7 +56,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2>Behold! This is <strong>Alptra</strong>!</h2>
+												<h2>Post production and the film, television and streaming industry.</h2>
 											</header>
 											<span class="image featured"><img src="images/pic09.jpg" alt="" /></span>
 											<h3>Right is also not left</h3>
