--- a/index.html
+++ b/index.html
@@ -124,19 +124,6 @@
 											</ul>
 										</article>
 
-									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h2><a href="#">By the way, we are located in the French Alps, between France, Italy and Switzerland.</a></h2>
-											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps"/></a>
-											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
-											<p></p>
-											<ul class="actions">
-												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
-											</ul>
-										</article>
-
 								</div>
 
 							<!-- Sidebar -->
@@ -189,7 +176,8 @@
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
 										</article>
-									
+
+								</div>				
 						</div>
 					</div>
 				</section>
