--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
 										</article>
-			
+
+							</div>
 						</div>
 					</div>
 				</section>
