--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 								<div id="content" class="col-8 col-12-medium">
 
 									<!-- Post -->
-									
+										<article class="box post">
+										</article>
 									<!-- Post -->
 										<article class="box post">
 											<header>
