--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<h3></h3>
+											<h3>Every project is special.</h3>
 										</article>
 									<!-- Post -->
 										<article class="box post">
