--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -140,7 +140,7 @@
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="#" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+												<a title="Email" href="#" data-email_b64="dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20="></a> class="form-button-submit button icon solid fa-envelope">Send Message</a>
 											</div>
 										</div>
 									</form>
@@ -189,6 +189,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/safe-email@1.1.1/dist/safe-email.min.js"></script>
 
 	</body>
 </html>
