--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen"  /></a>
+										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" class="arrondie" /></a>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
