--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" /></a>
+										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 5%"/></a>
 										<header>
 											<h3>Translation</h3>
 										</header>
