--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<header>
 											<h3>Translation</h3>
 										</header>
-										<p>I offer translation services from English into French, in the fields of French law, industry, and entertainment.</p>
+										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment.</p>
 									</section>
 
 							</div>
